--- a/restaurants/restaurantUn.html
+++ b/restaurants/restaurantUn.html
@@ -37,18 +37,18 @@
         class="image-plat-restaurant"
       />
       <section class="box-menu flex">
-        <div class="box-texte-coeur">
-          <div class="texte-restaurant">
+        <div class="h2-coeur flex">
+          <div>
             <h2 class="nom-restaurant-page-bis">La palette du goût</h2>
           </div>
-          <div class="box-coeurs">
-            <button>
+          <div class="box-coeurs flex position-relative">
+            <button class="button-coeur flex">
               <i class="fa-regular fa-heart coeur"></i>
               <i class="fa-solid fa-heart coeur-full"></i>
             </button>
           </div>
         </div>
-        <div>
+        <div class="description-plats">
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
@@ -93,7 +93,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="description-plats">
           <h3>Plat</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
@@ -138,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="description-plats">
           <h3>Dessert</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
