ajout pages restaurants

--- a/restaurants/restaurantTrois.html
+++ b/restaurants/restaurantTrois.html
@@ -32,7 +32,7 @@
     </header>
     <main class="page-individuelle">
       <img
-        src="/assets/images-plats/la-palette-du-gout.jpg"
+        src="../assets/images-plats/a-la-française.jpg"
         alt="image plat"
         class="image-plat-restaurant"
       />
