--- a/restaurants/restaurantQuatre.html
+++ b/restaurants/restaurantQuatre.html
@@ -32,7 +32,7 @@
     </header>
     <main class="page-individuelle">
       <img
-        src="/assets/images-plats/la-palette-du-gout.jpg"
+        src="../assets/images-plats/le-delice-des-sens.jpg"
         alt="image plat"
         class="image-plat-restaurant"
       />
