--- a/restaurants/restaurantTrois.html
+++ b/restaurants/restaurantTrois.html
@@ -39,7 +39,7 @@
       <section class="box-menu flex">
         <div class="h2-coeur flex">
           <div>
-            <h2 class="nom-restaurant-page-bis">La palette du goût</h2>
+            <h2 class="nom-restaurant-page-bis">À la française</h2>
           </div>
           <div class="box-coeurs flex position-relative">
             <button class="button-coeur flex">
@@ -48,13 +48,13 @@
             </button>
           </div>
         </div>
-        <div class="description-plats">
+        <div class="description-plats entree">
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Tartare de poulpe acidulé</span>
+                <span>Aux zestes d'orange</span>
               </div>
               <div class="element2-button-menu flex">
                 <p>25€</p>
@@ -67,11 +67,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Velouté de légumes d'antan</span>
+                <span>Carotte, panais, topinambour</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -81,11 +81,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Soupe à l'oignon</span>
+                <span>Revisitée</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>20€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -93,16 +93,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Plat</h3>
+        <div class="description-plats plat">
+          <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Coquilles Saint-Jacques</span>
+                <span>AAccompagnées d'une purée de panais</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>40€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -112,11 +112,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Magret de canard</span>
+                <span>Et parmentier de pommes de terre</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -126,11 +126,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">FPigeonneau d’Ille-et-Vilaine</span>
+                <span>Sur son lit de gnocchis aux légumes</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>44€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -138,16 +138,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Dessert</h3>
+        <div class="description-plats dessert">
+          <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Pétales de violettes glacés</span>
+                <span>Et purée de noisettes</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>18€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -157,11 +157,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Fondant au chocolat</span>
+                <span>Revisité</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>22€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -171,24 +171,24 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Millefeuille croustillant</span>
+                <span>Myrtilles et pâte d’amande</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>23€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
             </div>
           </div>
+        </div>
+        <div class="flex button-commander">
+          <button class="style-button shadow">
+            <span>Commander</span>
+          </button>
         </div>
       </section>
-      <div class="flex button-commander">
-        <button class="style-button shadow">
-          <span>Commander</span>
-        </button>
-      </div>
     </main>
     <footer class="box-footer">
       <h3>Ohmyfood</h3>
