--- a/restaurants/restaurantDeux.html
+++ b/restaurants/restaurantDeux.html
@@ -39,7 +39,7 @@
       <section class="box-menu flex">
         <div class="h2-coeur flex">
           <div>
-            <h2 class="nom-restaurant-page-bis">La palette du goût</h2>
+            <h2 class="nom-restaurant-page-bis">La note enchantée</h2>
           </div>
           <div class="box-coeurs flex position-relative">
             <button class="button-coeur flex">
@@ -48,13 +48,13 @@
             </button>
           </div>
         </div>
-        <div class="description-plats">
+        <div class="description-plats entree">
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Ravioles de foie gras</span>
+                <span>Accompagnées de leur crème à la truffe</span>
               </div>
               <div class="element2-button-menu flex">
                 <p>25€</p>
@@ -67,11 +67,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Caviar osciètre</span>
+                <span>Sur blini à la farine de blé noir</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -81,11 +81,25 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Homard et espuma de potiron</span>
+                <span>Marinés aux zestes d'orange</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>20€</p>
+              </div>
+            </button>
+            <div class="cloche-menu flex">
+              <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
+            </div>
+          </div>
+          <div class="box-choix-menu flex shadow">
+            <button class="button-choix-menu flex">
+              <div class="element1-button-menu flex">
+                <span class="titre-plat">Foie gras de canard cuit entier</span>
+                <span>Confiture de figue et pain toasté</span>
+              </div>
+              <div class="element2-button-menu flex">
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -93,16 +107,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Plat</h3>
+        <div class="description-plats plat">
+          <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Noix de coquilles Saint-Jacques</span>
+                <span>Sur lit de purée de céleri-rave</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>40€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -112,11 +126,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Langoustine poêlée</span>
+                <span>Purée de patate douce</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -126,11 +140,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Mijoté de queue de bœuf </span>
+                <span>Et riz sauvage aux zestes de citron</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>44€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -138,16 +152,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Dessert</h3>
+        <div class="description-plats dessert">
+          <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Macaron noisette et chocolat</span>
+                <span>Glace au caramel brun et sel de Guérande</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>18€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -157,11 +171,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Baba au rhum revisité </span>
+                <span>Avec son coulis de citron</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>22€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -171,24 +185,24 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Tarte au citron meringuée</span>
+                <span>Déstructurée</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>23€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
             </div>
           </div>
+        </div>
+        <div class="flex button-commander">
+          <button class="style-button shadow">
+            <span>Commander</span>
+          </button>
         </div>
       </section>
-      <div class="flex button-commander">
-        <button class="style-button shadow">
-          <span>Commander</span>
-        </button>
-      </div>
     </main>
     <footer class="box-footer">
       <h3>Ohmyfood</h3>
