--- a/restaurants/restaurantQuatre.html
+++ b/restaurants/restaurantQuatre.html
@@ -39,7 +39,7 @@
       <section class="box-menu flex">
         <div class="h2-coeur flex">
           <div>
-            <h2 class="nom-restaurant-page-bis">La palette du goût</h2>
+            <h2 class="nom-restaurant-page-bis">Le délice des sens</h2>
           </div>
           <div class="box-coeurs flex position-relative">
             <button class="button-coeur flex">
@@ -48,13 +48,13 @@
             </button>
           </div>
         </div>
-        <div class="description-plats">
+        <div class="description-plats entree">
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Tartare de thon</span>
+                <span>Assaisonné au yuzu</span>
               </div>
               <div class="element2-button-menu flex">
                 <p>25€</p>
@@ -67,11 +67,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Bouchée de homard croustillant</span>
+                <span>Et sa farandole de petits légumes</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -81,11 +81,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">FVelouté de cèpes </span>
+                <span>Aux truffes</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>20€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -93,16 +93,18 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Plat</h3>
+        <div class="description-plats plat">
+          <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat"
+                  >Poulet rôti aux herbes de Provence
+                </span>
+                <span>Et sa crème de truffe</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>40€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -112,11 +114,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Langouste rôtie</span>
+                <span>Et ses légumes de saison</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -126,11 +128,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat"> Côte de bœuf Angus</span>
+                <span>Et sa purée de panais</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>44€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -138,16 +140,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Dessert</h3>
+        <div class="description-plats dessert">
+          <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Farandole de desserts</span>
+                <span>Du chef</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>18€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -157,11 +159,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Crème brulée </span>
+                <span>Revisitée</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>22€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -171,24 +173,24 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Tiramisu</span>
+                <span>À la noisette</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>23€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
             </div>
           </div>
+        </div>
+        <div class="flex button-commander">
+          <button class="style-button shadow">
+            <span>Commander</span>
+          </button>
         </div>
       </section>
-      <div class="flex button-commander">
-        <button class="style-button shadow">
-          <span>Commander</span>
-        </button>
-      </div>
     </main>
     <footer class="box-footer">
       <h3>Ohmyfood</h3>
