--- a/restaurants/restaurantUn.html
+++ b/restaurants/restaurantUn.html
@@ -20,6 +20,8 @@
     />
   </head>
   <body class="page-restaurant">
+    <div class="youyou"></div>
+
     <header>
       <div class="flex box-cadre page-bis">
         <a class="a-page-bis" href="/index.html">
@@ -48,12 +50,12 @@
             </button>
           </div>
         </div>
-        <div class="description-plats">
+        <div class="description-plats entree">
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
+                <span class="titre-plat">Fricassée d'escargots</span>
                 <span>Au piment d'Espelette</span>
               </div>
               <div class="element2-button-menu flex">
@@ -67,11 +69,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Foie gras de canard mi-cuit</span>
+                <span>Et ses copeaux de truffe noire</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -81,11 +83,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Œuf au plat </span>
+                <span>Assaisonné à la truffe sur lit de caviar</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>20€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -93,16 +95,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Plat</h3>
+        <div class="description-plats plat">
+          <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat"> Filet de bœuf aux herbes </span>
+                <span> Accompagné de sa ribambelle de légumes</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>40€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -112,11 +114,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Parmentier de queue de bœuf</span>
+                <span>À la truffe noire sur sa purée de panais</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>35€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -126,11 +128,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Filet de turbot</span>
+                <span>Aux agrumes</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>44€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -138,16 +140,16 @@
             </div>
           </div>
         </div>
-        <div class="description-plats">
-          <h3>Dessert</h3>
+        <div class="description-plats dessert">
+          <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Paris-Brest </span>
+                <span> Revisité</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>18€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -157,11 +159,11 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Macaron au chocolat d'exception </span>
+                <span> Et glace à la vanille de Madagascar</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>22€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
@@ -171,24 +173,24 @@
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
               <div class="element1-button-menu flex">
-                <span>Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="titre-plat">Mousse au chocolat </span>
+                <span> Au piment d'Espelette et à la truffe noire</span>
               </div>
               <div class="element2-button-menu flex">
-                <p>25€</p>
+                <p>23€</p>
               </div>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
             </div>
           </div>
+        </div>
+        <div class="flex button-commander">
+          <button class="style-button shadow">
+            <span>Commander</span>
+          </button>
         </div>
       </section>
-      <div class="flex button-commander">
-        <button class="style-button shadow">
-          <span>Commander</span>
-        </button>
-      </div>
     </main>
     <footer class="box-footer">
       <h3>Ohmyfood</h3>
