vérification w3c pour le html

--- a/restaurants/restaurantDeux.html
+++ b/restaurants/restaurantDeux.html
@@ -52,13 +52,13 @@
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Ravioles de foie gras</span>
                 <span>Accompagnées de leur crème à la truffe</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>25€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>25€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -66,13 +66,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Caviar osciètre</span>
                 <span>Sur blini à la farine de blé noir</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -80,13 +80,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Homard et espuma de potiron</span>
                 <span>Marinés aux zestes d'orange</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>20€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>20€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -94,13 +94,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Foie gras de canard cuit entier</span>
                 <span>Confiture de figue et pain toasté</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -111,13 +111,13 @@
           <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Noix de coquilles Saint-Jacques</span>
                 <span>Sur lit de purée de céleri-rave</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>40€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>40€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -125,13 +125,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Langoustine poêlée</span>
                 <span>Purée de patate douce</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -139,13 +139,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Mijoté de queue de bœuf </span>
                 <span>Et riz sauvage aux zestes de citron</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>44€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>44€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -156,13 +156,13 @@
           <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Macaron noisette et chocolat</span>
                 <span>Glace au caramel brun et sel de Guérande</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>18€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>18€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -170,13 +170,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Baba au rhum revisité </span>
                 <span>Avec son coulis de citron</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>22€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>22€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -184,13 +184,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Tarte au citron meringuée</span>
                 <span>Déstructurée</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>23€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>23€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
