--- a/restaurants/restaurantUn.html
+++ b/restaurants/restaurantUn.html
@@ -54,13 +54,13 @@
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Fricassée d'escargots</span>
                 <span>Au piment d'Espelette</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>25€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>25€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -68,13 +68,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Foie gras de canard mi-cuit</span>
                 <span>Et ses copeaux de truffe noire</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -82,13 +82,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Œuf au plat </span>
                 <span>Assaisonné à la truffe sur lit de caviar</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>20€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>20€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -99,13 +99,13 @@
           <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat"> Filet de bœuf aux herbes </span>
                 <span> Accompagné de sa ribambelle de légumes</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>40€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>40€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -113,13 +113,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Parmentier de queue de bœuf</span>
                 <span>À la truffe noire sur sa purée de panais</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -127,13 +127,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Filet de turbot</span>
                 <span>Aux agrumes</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>44€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>44€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -144,13 +144,13 @@
           <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Paris-Brest </span>
                 <span> Revisité</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>18€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>18€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -158,13 +158,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Macaron au chocolat d'exception </span>
                 <span> Et glace à la vanille de Madagascar</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>22€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>22€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -172,13 +172,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Mousse au chocolat </span>
                 <span> Au piment d'Espelette et à la truffe noire</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>23€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>23€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
