--- a/restaurants/restaurantQuatre.html
+++ b/restaurants/restaurantQuatre.html
@@ -52,13 +52,13 @@
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Tartare de thon</span>
                 <span>Assaisonné au yuzu</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>25€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>25€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -66,13 +66,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Bouchée de homard croustillant</span>
                 <span>Et sa farandole de petits légumes</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -80,13 +80,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">FVelouté de cèpes </span>
                 <span>Aux truffes</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>20€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>20€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -97,15 +97,15 @@
           <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat"
                   >Poulet rôti aux herbes de Provence
                 </span>
                 <span>Et sa crème de truffe</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>40€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>40€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -113,13 +113,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Langouste rôtie</span>
                 <span>Et ses légumes de saison</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -127,13 +127,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat"> Côte de bœuf Angus</span>
                 <span>Et sa purée de panais</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>44€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>44€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -144,13 +144,13 @@
           <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Farandole de desserts</span>
                 <span>Du chef</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>18€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>18€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -158,13 +158,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Crème brulée </span>
                 <span>Revisitée</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>22€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>22€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -172,13 +172,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Tiramisu</span>
                 <span>À la noisette</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>23€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>23€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
