--- a/restaurants/restaurantTrois.html
+++ b/restaurants/restaurantTrois.html
@@ -52,13 +52,13 @@
           <h3>Entrées</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Tartare de poulpe acidulé</span>
                 <span>Aux zestes d'orange</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>25€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>25€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -66,13 +66,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Velouté de légumes d'antan</span>
                 <span>Carotte, panais, topinambour</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -80,13 +80,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Soupe à l'oignon</span>
                 <span>Revisitée</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>20€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>20€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -97,13 +97,13 @@
           <h3>Plats</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Coquilles Saint-Jacques</span>
                 <span>AAccompagnées d'une purée de panais</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>40€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>40€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -111,13 +111,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Magret de canard</span>
                 <span>Et parmentier de pommes de terre</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>35€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>35€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -125,13 +125,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">FPigeonneau d’Ille-et-Vilaine</span>
                 <span>Sur son lit de gnocchis aux légumes</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>44€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>44€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -142,13 +142,13 @@
           <h3>Desserts</h3>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Pétales de violettes glacés</span>
                 <span>Et purée de noisettes</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>18€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>18€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -156,13 +156,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Fondant au chocolat</span>
                 <span>Revisité</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>22€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>22€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
@@ -170,13 +170,13 @@
           </div>
           <div class="box-choix-menu flex shadow">
             <button class="button-choix-menu flex">
-              <div class="element1-button-menu flex">
+              <span class="element1-button-menu flex">
                 <span class="titre-plat">Millefeuille croustillant</span>
                 <span>Myrtilles et pâte d’amande</span>
-              </div>
-              <div class="element2-button-menu flex">
-                <p>23€</p>
-              </div>
+              </span>
+              <span class="element2-button-menu flex">
+                <span>23€</span>
+              </span>
             </button>
             <div class="cloche-menu flex">
               <i class="fa-solid fa-circle-check" aria-hidden="true"></i>
