modification chemin photos

--- a/restaurants/restaurantDeux.html
+++ b/restaurants/restaurantDeux.html
@@ -26,13 +26,13 @@
           <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
         </a>
         <div class="flex-1 box-logo-page-bis">
-          <img src="../assets/logo/ohmyfood@2x.svg" alt="image-logo" />
+          <img src="./assets/logo/ohmyfood@2x.svg" alt="image-logo" />
         </div>
       </div>
     </header>
     <main class="page-individuelle">
       <img
-        src="../assets/images-plats/la-note-enchantee.jpg"
+        src="./assets/images-plats/la-note-enchantee.jpg"
         alt="image plat"
         class="image-plat-restaurant"
       />
