--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- ***************************** Header ************************ -->
     <header>
       <div class="logo centrer flex">
-        <img src="/assets/logo/ohmyfood@2x.svg" alt="image-logo" />
+        <img src="./assets/logo/ohmyfood@2x.svg" alt="image-logo" />
       </div>
     </header>
     <section class="location centrer flex">
@@ -104,7 +104,7 @@
             >
               <div class="position-relative">
                 <img
-                  src="/assets/images-plats/la-palette-du-gout.jpg"
+                  src="./assets/images-plats/la-palette-du-gout.jpg"
                   alt="image plat"
                   class="images-plats"
                 />
@@ -132,7 +132,7 @@
             >
               <div class="position-relative">
                 <img
-                  src="/assets/images-plats/la-note-enchantee.jpg"
+                  src="./assets/images-plats/la-note-enchantee.jpg"
                   alt="image plat"
                   class="images-plats"
                 />
@@ -158,7 +158,7 @@
             >
               <div class="position-relative">
                 <img
-                  src="/assets/images-plats/a-la-française.jpg"
+                  src="./assets/images-plats/a-la-française.jpg"
                   alt="image plat"
                   class="images-plats"
                 />
@@ -184,7 +184,7 @@
             >
               <div class="position-relative">
                 <img
-                  src="/assets/images-plats/le-delice-des-sens.jpg"
+                  src="./assets/images-plats/le-delice-des-sens.jpg"
                   alt="image plat"
                   class="images-plats"
                 />
