modification chemin pages restaurants et href page index

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="articles">
           <article>
             <a
-              href="/restaurants/restaurantUn.html"
+              href="./restaurants/restaurantUn.html"
               class="liens-cards-restaurants flex"
             >
               <div class="position-relative">
@@ -127,7 +127,7 @@
 
           <article>
             <a
-              href="/restaurants/restaurantDeux.html"
+              href="./restaurants/restaurantDeux.html"
               class="liens-cards-restaurants flex"
             >
               <div class="position-relative">
@@ -153,7 +153,7 @@
           </article>
           <article>
             <a
-              href="/restaurants/restaurantTrois.html"
+              href="./restaurants/restaurantTrois.html"
               class="liens-cards-restaurants flex"
             >
               <div class="position-relative">
@@ -179,7 +179,7 @@
           </article>
           <article>
             <a
-              href="/restaurants/restaurantQuatre.html"
+              href="./restaurants/restaurantQuatre.html"
               class="liens-cards-restaurants flex"
             >
               <div class="position-relative">
