--- a/restaurants/restaurantQuatre.html
+++ b/restaurants/restaurantQuatre.html
@@ -22,17 +22,17 @@
   <body class="page-restaurant">
     <header>
       <div class="flex box-cadre page-bis">
-        <a class="a-page-bis" href="/index.html">
+        <a class="a-page-bis" href="../index.html">
           <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
         </a>
         <div class="flex-1 box-logo-page-bis">
-          <img src="./assets/logo/ohmyfood@2x.svg" alt="image-logo" />
+          <img src="../assets/logo/ohmyfood@2x.svg" alt="image-logo" />
         </div>
       </div>
     </header>
     <main class="page-individuelle">
       <img
-        src="./assets/images-plats/le-delice-des-sens.jpg"
+        src="../assets/images-plats/le-delice-des-sens.jpg"
         alt="image plat"
         class="image-plat-restaurant"
       />
