--- a/restaurants/restaurantUn.html
+++ b/restaurants/restaurantUn.html
@@ -24,17 +24,17 @@
 
     <header>
       <div class="flex box-cadre page-bis">
-        <a class="a-page-bis" href="/index.html">
+        <a class="a-page-bis" href="../index.html">
           <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
         </a>
         <div class="flex-1 box-logo-page-bis">
-          <img src="./assets/logo/ohmyfood@2x.svg" alt="image-logo" />
+          <img src="../assets/logo/ohmyfood@2x.svg" alt="image-logo" />
         </div>
       </div>
     </header>
     <main class="page-individuelle">
       <img
-        src="./assets/images-plats/la-palette-du-gout.jpg"
+        src="../assets/images-plats/la-palette-du-gout.jpg"
         alt="image plat"
         class="image-plat-restaurant"
       />
