Modification du repli du menu et vérification globale du projet.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <span class="flex number">2</span>
             <div class="flex flex-1">
               <i class="fa-solid fa-list icone-etape" aria-hidden="true"> </i>
-              <span class="flex-1">Choisissez un restaurant</span>
+              <span class="flex-1">Composez votre menu</span>
             </div>
           </div>
           <div class="box-etape flex flex-1 shadow">
@@ -88,7 +88,7 @@
                 class="fa-solid fa-store icone-etape shop"
                 aria-hidden="true"
               ></i>
-              <span class="flex-1">Choisissez un restaurant</span>
+              <span class="flex-1">Dégustez au restaurant</span>
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
     <!-- ***************************** footer ************************ -->
     <footer class="box-footer">
       <h3>Ohmyfood</h3>
-      <div class="elements-footer flex">
+      <div class="elements-footer">
         <div class="element flex">
           <i class="fa-solid fa-utensils" aria-hidden="true"> </i
           ><span class="span-footer">Proposer un restaurant</span>
