--- a/restaurants/restaurantQuatre.html
+++ b/restaurants/restaurantQuatre.html
@@ -6,9 +6,14 @@
 
     <title>Document</title>
     <link rel="stylesheet" href="../styles.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Shrikhand&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <link
@@ -54,7 +59,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Tartare de thon</span>
-                <span>Assaisonné au yuzu</span>
+                <span class="description-plat">Assaisonné au yuzu</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>25€</span>
@@ -68,7 +73,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Bouchée de homard croustillant</span>
-                <span>Et sa farandole de petits légumes</span>
+                <span class="description-plat"
+                  >Et sa farandole de petits légumes</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -82,7 +89,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">FVelouté de cèpes </span>
-                <span>Aux truffes</span>
+                <span class="description-plat">Aux truffes</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>20€</span>
@@ -101,7 +108,7 @@
                 <span class="titre-plat"
                   >Poulet rôti aux herbes de Provence
                 </span>
-                <span>Et sa crème de truffe</span>
+                <span class="description-plat">Et sa crème de truffe</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>40€</span>
@@ -115,7 +122,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Langouste rôtie</span>
-                <span>Et ses légumes de saison</span>
+                <span class="description-plat">Et ses légumes de saison</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -129,7 +136,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat"> Côte de bœuf Angus</span>
-                <span>Et sa purée de panais</span>
+                <span class="description-plat">Et sa purée de panais</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>44€</span>
@@ -146,7 +153,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Farandole de desserts</span>
-                <span>Du chef</span>
+                <span class="description-plat">Du chef</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>18€</span>
@@ -160,7 +167,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Crème brulée </span>
-                <span>Revisitée</span>
+                <span class="description-plat">Revisitée</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>22€</span>
@@ -174,7 +181,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Tiramisu</span>
-                <span>À la noisette</span>
+                <span class="description-plat">À la noisette</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>23€</span>
