--- a/restaurants/restaurantDeux.html
+++ b/restaurants/restaurantDeux.html
@@ -7,8 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Shrikhand&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <link
@@ -54,7 +60,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Ravioles de foie gras</span>
-                <span>Accompagnées de leur crème à la truffe</span>
+                <span class="description-plat"
+                  >Accompagnées de leur crème à la truffe</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>25€</span>
@@ -68,7 +76,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Caviar osciètre</span>
-                <span>Sur blini à la farine de blé noir</span>
+                <span class="description-plat"
+                  >Sur blini à la farine de blé noir</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -82,7 +92,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Homard et espuma de potiron</span>
-                <span>Marinés aux zestes d'orange</span>
+                <span class="description-plat"
+                  >Marinés aux zestes d'orange</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>20€</span>
@@ -96,7 +108,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Foie gras de canard cuit entier</span>
-                <span>Confiture de figue et pain toasté</span>
+                <span class="description-plat"
+                  >Confiture de figue et pain toasté</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -113,7 +127,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Noix de coquilles Saint-Jacques</span>
-                <span>Sur lit de purée de céleri-rave</span>
+                <span class="description-plat"
+                  >Sur lit de purée de céleri-rave</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>40€</span>
@@ -127,7 +143,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Langoustine poêlée</span>
-                <span>Purée de patate douce</span>
+                <span class="description-plat">Purée de patate douce</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -141,7 +157,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Mijoté de queue de bœuf </span>
-                <span>Et riz sauvage aux zestes de citron</span>
+                <span class="description-plat"
+                  >Et riz sauvage aux zestes de citron</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>44€</span>
@@ -158,7 +176,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Macaron noisette et chocolat</span>
-                <span>Glace au caramel brun et sel de Guérande</span>
+                <span class="description-plat"
+                  >Glace au caramel brun et sel de Guérande</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>18€</span>
@@ -172,7 +192,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Baba au rhum revisité </span>
-                <span>Avec son coulis de citron</span>
+                <span class="description-plat">Avec son coulis de citron</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>22€</span>
@@ -186,7 +206,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Tarte au citron meringuée</span>
-                <span>Déstructurée</span>
+                <span class="description-plat">Déstructurée</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>23€</span>
