--- a/restaurants/restaurantTrois.html
+++ b/restaurants/restaurantTrois.html
@@ -7,8 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Shrikhand&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <link
@@ -54,7 +60,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Tartare de poulpe acidulé</span>
-                <span>Aux zestes d'orange</span>
+                <span class="description-plat">Aux zestes d'orange</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>25€</span>
@@ -68,7 +74,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Velouté de légumes d'antan</span>
-                <span>Carotte, panais, topinambour</span>
+                <span class="description-plat"
+                  >Carotte, panais, topinambour</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -82,7 +90,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Soupe à l'oignon</span>
-                <span>Revisitée</span>
+                <span class="description-plat">Revisitée</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>20€</span>
@@ -99,7 +107,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Coquilles Saint-Jacques</span>
-                <span>AAccompagnées d'une purée de panais</span>
+                <span class="description-plat"
+                  >Accompagnées d'une purée de panais</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>40€</span>
@@ -113,7 +123,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Magret de canard</span>
-                <span>Et parmentier de pommes de terre</span>
+                <span class="description-plat"
+                  >Et parmentier de pommes de terre</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -127,7 +139,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">FPigeonneau d’Ille-et-Vilaine</span>
-                <span>Sur son lit de gnocchis aux légumes</span>
+                <span class="description-plat"
+                  >Sur son lit de gnocchis aux légumes</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>44€</span>
@@ -144,7 +158,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Pétales de violettes glacés</span>
-                <span>Et purée de noisettes</span>
+                <span class="description-plat">Et purée de noisettes</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>18€</span>
@@ -158,7 +172,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Fondant au chocolat</span>
-                <span>Revisité</span>
+                <span class="description-plat">Revisité</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>22€</span>
@@ -172,7 +186,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Millefeuille croustillant</span>
-                <span>Myrtilles et pâte d’amande</span>
+                <span class="description-plat">Myrtilles et pâte d’amande</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>23€</span>
