--- a/restaurants/restaurantUn.html
+++ b/restaurants/restaurantUn.html
@@ -7,8 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Shrikhand&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <link
@@ -20,8 +26,6 @@
     />
   </head>
   <body class="page-restaurant">
-    <div class="youyou"></div>
-
     <header>
       <div class="flex box-cadre page-bis">
         <a class="a-page-bis" href="../index.html">
@@ -56,7 +60,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Fricassée d'escargots</span>
-                <span>Au piment d'Espelette</span>
+                <span class="description-plat">Au piment d'Espelette</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>25€</span>
@@ -70,7 +74,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Foie gras de canard mi-cuit</span>
-                <span>Et ses copeaux de truffe noire</span>
+                <span class="description-plat"
+                  >Et ses copeaux de truffe noire</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -84,7 +90,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Œuf au plat </span>
-                <span>Assaisonné à la truffe sur lit de caviar</span>
+                <span class="description-plat"
+                  >Assaisonné à la truffe sur lit de caviar</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>20€</span>
@@ -101,7 +109,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat"> Filet de bœuf aux herbes </span>
-                <span> Accompagné de sa ribambelle de légumes</span>
+                <span class="description-plat">
+                  Accompagné de sa ribambelle de légumes</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>40€</span>
@@ -115,7 +125,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Parmentier de queue de bœuf</span>
-                <span>À la truffe noire sur sa purée de panais</span>
+                <span class="description-plat"
+                  >À la truffe noire sur sa purée de panais</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>35€</span>
@@ -129,7 +141,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Filet de turbot</span>
-                <span>Aux agrumes</span>
+                <span class="description-plat">Aux agrumes</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>44€</span>
@@ -146,7 +158,7 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Paris-Brest </span>
-                <span> Revisité</span>
+                <span class="description-plat"> Revisité</span>
               </span>
               <span class="element2-button-menu flex">
                 <span>18€</span>
@@ -160,7 +172,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Macaron au chocolat d'exception </span>
-                <span> Et glace à la vanille de Madagascar</span>
+                <span class="description-plat">
+                  Et glace à la vanille de Madagascar</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>22€</span>
@@ -174,7 +188,9 @@
             <button class="button-choix-menu flex">
               <span class="element1-button-menu flex">
                 <span class="titre-plat">Mousse au chocolat </span>
-                <span> Au piment d'Espelette et à la truffe noire</span>
+                <span class="description-plat">
+                  Au piment d'Espelette et à la truffe noire</span
+                >
               </span>
               <span class="element2-button-menu flex">
                 <span>23€</span>
@@ -185,7 +201,7 @@
             </div>
           </div>
         </div>
-        <div class="flex button-commander">
+        <div class="button-commander">
           <button class="style-button shadow">
             <span>Commander</span>
           </button>
